--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ctsy/rpc",
-  "version": "1.0.11",
+  "version": "1.0.12",
   "main": "dist/index.js",
   "author": "CastleMY <490523604@qq.com>",
   "license": "MIT",
@@ -10,6 +10,10 @@
     "dist/index.d.ts",
     "README.md"
   ],
+  "scripts": {
+    "build": "rm -rf dist && tsc && webpack --mode production --config build/config.js  src/index.ts",
+    "prepublish": "yarn build"
+  },
   "repository": {
     "type": "github",
     "url": "https://github.com/c-tsy/rpc"
@@ -18,6 +22,10 @@
     "buffer": "^5.2.1"
   },
   "devDependencies": {
-    "@types/node": "^11.13.8"
+    "@types/node": "^11.13.8",
+    "ts-loader": "^6.0.4",
+    "typescript": "^3.5.3",
+    "webpack": "^4.39.1",
+    "webpack-cli": "^3.3.6"
   }
 }
